force-app/main/default/objects/Incident/fields/Creation_Category__c.field-meta.xml
<CustomField>
    <fullName>Creation_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creation Category</label>
    <referenceTo>Creation_Category__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>