force-app/main/default/objects/Incident/fields/Incident_Cause__c.field-meta.xml
<CustomField>
    <fullName>Incident_Cause__c</fullName>
    <label>Incident Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Impact Case</fullName>
            </value>
            <value>
                <fullName>Recurring Cases</fullName>
            </value>
            <value>
                <fullName>Internal Outage</fullName>
            </value>
            <value>
                <fullName>Third Party Outage</fullName>
            </value>
            <value>
                <fullName>Not Outage Related</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>