force-app/main/default/objects/Incident/fields/Support_Queue__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Queue</label>
    <referenceTo>Support_Queue_Config__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>