force-app/main/default/objects/Incident/validationRules/Prevent_Status_Change_After_72_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Change_After_72_hours</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status), 
OR(ISPICKVAL(PRIORVALUE(Status),&apos;Closed&apos;),ISPICKVAL(PRIORVALUE(Status),&apos;Cancelled&apos;)), Now() &gt; (ResolutionDateTime + 3),NOT( $Permission.Incident_Status_Change_Allowed ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status cannot be changed after 72 hours</errorMessage>
</ValidationRule>