force-app/main/default/objects/Incident/validationRules/Required_Status_Reason_For_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Status_Reason_For_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Automation_Setting__c.Skip_Validation_Rule__c = FALSE,NOT($Profile.Name = &quot;Soup Integration&quot;),OR(AND(ISPICKVAL(Status,&quot;Pending&quot;),ISPICKVAL(Status_Reason__c,&quot;&quot;)),AND(ISPICKVAL(Status,&quot;Closed&quot;),ISPICKVAL(Status_Reason__c,&quot;&quot;))))</errorConditionFormula>
    <errorDisplayField>Status_Reason__c</errorDisplayField>
    <errorMessage>Status Reason Required for Pending/Closed Incident Status.</errorMessage>
</ValidationRule>