force-app/main/default/objects/Incident/validationRules/Status_Close_Resolution_Note_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Close_Resolution_Note_Required</fullName>
    <active>true</active>
    <description>Resolution Note is required to close the Incident</description>
    <errorConditionFormula>AND($Setup.Automation_Setting__c.Skip_Validation_Rule__c = FALSE, NOT($Profile.Name = &quot;Soup Integration&quot;),ISPICKVAL(Status, &apos;Closed&apos;), ISBLANK(Resolution_Notes__c))</errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>Resolution Note is required when Inicident Status is Closed</errorMessage>
</ValidationRule>