force-app/main/default/objects/Incident/listViews/All_Inicidents.listView-meta.xml
<ListView>
    <fullName>All_Inicidents</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <label>All Inicidents</label>
</ListView>